--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,15 +72,16 @@ allowed_external_types = [
 name = "webpki"
 
 [features]
-default = ["std", "ring"]
+default = ["std", "ring", "async-verify"]
 alloc = ["ring?/alloc", "pki-types/alloc"]
 aws_lc_rs = ["dep:aws-lc-rs"]
 ring = ["dep:ring"]
 std = ["alloc", "pki-types/std"]
+async-verify = ["alloc", "pki-types/async-verify"]
 
 [dependencies]
 aws-lc-rs = { version = "1", optional = true, default-features = false, features = ["aws-lc-sys"] }
-pki-types = { package = "rustls-pki-types", version = "1.2", default-features = false }
+pki-types = { package = "rustls-pki-types", version = "1.4", default-features = false }
 ring = { version = "0.17", default-features = false, optional = true }
 untrusted = "0.9"
 
@@ -113,3 +114,6 @@ codegen-units = 1
 name = "benchmarks"
 path = "benches/benchmark.rs"
 harness = false
+
+[patch.crates-io]
+rustls-pki-types = { git = "https://github.com/shamchak808/pki-types.git", branch = "async_signature_verification_alg"}
