--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,8 @@ once_cell = "1.17.2"
 rcgen = { version = "0.12.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+# dev dependencies can't be optional ¯\_(ツ)_/¯
+tokio = { version = "1.37", features = ["full"] }
 
 [profile.bench]
 opt-level = 3
